# Voxism-Dev

./: CMakeLists.txt  README.md  build-instructions.md
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
resources/: bloom_bright_frag.glsl  composite_frag.glsl  godray_frag.glsl  gun1painted_colored.blend  gun1painted_colored.blend1  gun1painted_colored.mtl  particle_vert.glsl  screen_vert.glsl  simple_vert.glsl  skybox_vert.glsl  tex_char_anim_vert.glsl  tex_lit_world_vert.glsl  toblender.py
resources/chunk/: chunk_frag.glsl  chunk_vert.glsl
resources/shaders/chunk/: chunk_frag.glsl  chunk_vert.glsl
resources/shaders/particle/: particle_frag.glsl
resources/shaders/postprocess/: blur_frag.glsl  composite_frag.glsl  ssao_blur_frag.glsl  ssao_frag.glsl  sunmask_frag.glsl
resources/shaders/scene/: preview_frag.glsl  preview_vert.glsl  simple_frag.glsl  tex_lit_world_frag.glsl
resources/shaders/skybox/: skybox_frag.glsl
resources/shaders/ui/: crosshair_frag.glsl  crosshair_vert.glsl
src/: CharacterController.cpp  CharacterController.h  Crosshair.cpp  Crosshair.h  FirstPersonCamera.cpp  FirstPersonCamera.h  GameObject.cpp  GameObject.h  GameWorld.cpp  GameWorld.h  GltfMesh.cpp  GltfMesh.h  MatrixStack.h  Program.cpp  Program.h  Skybox.cpp  Skybox.h  Texture.cpp  ThirdPersonCamera.cpp  ThirdPersonCamera.h  Tool.cpp  Tool.h  WindowManager.cpp  WindowManager.h  main.cpp
src/audio/: SoundtrackPlayer.cpp  SoundtrackPlayer.h  stb_vorbis_impl.c
src/camera/: FirstPersonCamera.cpp  FirstPersonCamera.h
src/tests/: test_noise_vectors.cpp  test_shader_path.cpp  test_ssao_bias.cpp  test_ssao_kernel.cpp
src/tools/: AreaTool.cpp  AreaTool.h  CubeTool.cpp  CubeTool.h  OrganicSphereTool.cpp  OrganicSphereTool.h  SphereTool.cpp  SphereTool.h  ToolGrid.cpp  ToolGrid.h  ToolManager.cpp  ToolManager.h  ToolPreviewRenderer.cpp  ToolPreviewRenderer.h  ToolTypes.h
src/world/: Chunk.cpp  Chunk.h  ChunkManager.cpp  ChunkManager.h  ChunkModifier.h  ChunkPos.h  IChunkModifier.h  Materials.cpp  Materials.h  PerlinNoise.h  TerrainGenerator.cpp  TerrainGenerator.h  VoxelMath.cpp  VoxelMath.h
src/world/modifiers/: BoundedChunkModifier.cpp  BoundedChunkModifier.h  BoxChunkModifier.cpp  BoxChunkModifier.h  IChunkModifier.cpp  IChunkModifier.h  SphereChunkModifier.cpp  SphereChunkModifier.h  StrokeSphereChunkModifier.cpp  StrokeSphereChunkModifier.h
